--- a/css/header.css
+++ b/css/header.css
@@ -5,7 +5,7 @@ body{font-family: 'Noto Sans KR', sans-serif;color: #2D2D2D;font-weight: 300;}
 li{list-style: none;}
 a{text-decoration: none;color: inherit;}
 button{background-color: transparent;border: 0;}
-#wrap{/*width: 100%;*/ max-width: 414px; margin: auto; text-align: center; min-width: 360px;}
+#wrap{max-width: 414px; margin: auto; text-align: center; min-width: 360px;}
 
 
 /*헤더부분*/
